fix section spacing

--- a/source/sass/blocks/section-credit.scss
+++ b/source/sass/blocks/section-credit.scss
@@ -8,7 +8,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 150px 0 110px;
+    padding: 140px 0 110px;
   }
 
   .index-main & {
@@ -16,7 +16,11 @@
     background-color: $palette-prime;
 
     @media (min-width: $small-desktop-width) {
-      padding-top: 140px;
+      padding-top: 91px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-top: 150px;
     }
   }
 }
