--- a/source/sass/blocks/section-quiz.scss
+++ b/source/sass/blocks/section-quiz.scss
@@ -3,11 +3,11 @@
   scroll-margin-top: 70px;
 
   @media (min-width: $small-desktop-width) {
-    padding: 65px 0 0;
+    padding: 45px 0 0;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 95px 0 0;
+    padding: 105px 0 0;
   }
 }
 
